[package]
name = "glone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
git2 = "0.17.2"
log = "0.4.19"
log4rs = "1.2.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_yaml = "0.9.25"
